# 3dengine

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: main.yml
shaders/: default.frag  default.vert  highlight.frag  highlight.vert  lit.frag  lit.vert  picking.frag  picking.vert  unlit.frag
src/: Interfaces.h  Schader.cpp  Shader.cpp  Shader.h  main.cpp
src/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  JsonGlmHelpers.h  Log.h  MathHelpers.h  PropertyNames.h  Raycaster.cpp  Raycaster.h  ResourceManager.cpp  ResourceManager.h  SettingsManager.cpp  SettingsManager.h  UI.cpp  UI.h  Ui.cpp  Ui.h
src/Core/UI/: AppUI.cpp  AppUI.h  BrushSettings.h  Curve.h  HierarchyView.cpp  HierarchyView.h  IView.h  InspectorView.cpp  InspectorView.h  MenuBar.cpp  MenuBar.h  SculptPane.cpp  SculptPane.h  SettingsWindow.cpp  SettingsWindow.h  ToolsPane.cpp  ToolsPane.h  UI.cpp  UI.h  UIElements.h  ViewPortPane.h  ViewportPane.cpp  ViewportPane.h
src/Factories/: SceneObjectFactory.cpp  SceneObjectFactory.h
src/Interfaces/: IEditableMesh.h
src/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h
src/Scene/: Grid.cpp  Grid.h  Scene.cpp  Scene.h  TransformGizmo.cpp  TransformGizmo.h
src/Scene/Objects/: BaseObject.cpp  BaseObject.h  CustomMesh.cpp  CustomMesh.h  Icosphere.cpp  Icosphere.h  ObjectTypes.h  Pyramid.cpp  Pyramid.h  ScalableSphereObject.cpp  ScalableSphereObject.h  ScaleHandle.cpp  ScaleHandle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Sculpting/: ISculptTool.h  MeshEditor.cpp  MeshEditor.h  SculptableMesh.cpp  SculptableMesh.h  SubObjectSelection.cpp  SubObjectSelection.h
src/Sculpting/Tools/: BrushSettings.h  GrabTool.cpp  GrabTool.h  MoveVertexTool.cpp  MoveVertexTool.h  PushPullTool.cpp  PushPullTool.h  SmoothTool.cpp  SmoothTool.h
tests/: ApplicationTests.cpp  CameraTests.cpp  GlmStreamOperators.h  MoveVertexToolAdvancedTests.cpp  MoveVertexToolTests.cpp  RaycasterTests.cpp  RendererTests.cpp  ResourceManagerTests.cpp  Scene.cpp  SceneLoadingTests.cpp  SceneTests.cpp  SculptingTests.cpp  SelectionTests.cpp  SettingsManager.cpp  SettingsManagerTests.cpp  TestMock.cpp  TestMocks.h  TransformGizmoTests.cpp  UITests.cpp  main.cpp  test_scene.json  test_scene_empty.json
